shows lines at correct times, still whitespace bug

--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+.hidden {
+  display: none;
+}
+
 .highlighted {
   background-color: yellow;
+  font-weight: bold;
 }
 
 #lyrics {
     font-family: Programme, Arial, sans-serif;
     font-weight: 100;
+    text-align: center;
 }
 
 @font-face {
